<?xml version="1.0" encoding="utf-8"?>
<com.wapo.flagship.features.grid.views.vote.VoteView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/voteView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="@dimen/voter_guide_bottom_border_width">

    <LinearLayout
        android:id="@+id/voteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/titleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/voteTitle"
                style="@style/HowToVoteHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/how_to_vote" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/voteTitle"
                android:background="@color/how_to_vote_headline_border_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/voteTitle"
                android:background="@color/how_to_vote_headline_border_color" />

        </RelativeLayout>

        <Spinner
            android:id="@+id/stateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/voter_guide_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/voter_guide_side_margin"
            android:background="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/voter_guide_side_margin"
            android:layout_marginEnd="@dimen/voter_guide_side_margin"
            android:background="@color/how_to_vote_headline_border_color" />

        <LinearLayout
            android:id="@+id/defaultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/voter_guide_side_margin"
            android:paddingEnd="@dimen/voter_guide_side_margin">

            <TextView
                style="@style/HowToVoteDefaultText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/vote_default_text1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_vote" />

            <TextView
                style="@style/HowToVoteDefaultText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/vote_default_text2" />

            <TextView
                style="@style/HowToVoteDefaultText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/vote_default_text3" />

            <TextView
                android:id="@+id/absenteeInfo"
                style="@style/HowToVoteButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/more_about_absentee_voting" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/voter_guide_side_margin"
            android:paddingEnd="@dimen/voter_guide_side_margin">

            <TextView
                android:id="@+id/stateGuideView"
                style="@style/HowToVoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="" />

            <TextView
                android:id="@+id/moreInfo"
                style="@style/HowToVoteButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/more_about_voting_in_state"
                 />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retry"
        android:visibility="gone" />

</com.wapo.flagship.features.grid.views.vote.VoteView>